Second_Step/data/46/58/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Tools.java:13: error: illegal start of expression
        this.tab[]=tab[];
                 ^
Tools.java:13: error: '.class' expected
        this.tab[]=tab[];
                        ^
2 errors
Not compiled
--|>
Grade :=>>0.00000
